# macworp

./: .dockerignore  .gitignore  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  Pipfile  Procfile  README.md  Readme.md  alembic.ini  backend.dockerfile  bar.py  config.development.yaml  config.docker-compose.yaml  config.production.yaml  config.yaml  db_seed.yml  deploy-test.docker-compose.yaml  deploy-test.env  dev.env  dev.users.yml  dev_auth.yaml  docker-compose.yaml  docker-compose.yml  environment.yml  example_workflow.json  foo.py  foobar.py  frontend.dockerfile  hash_generator.py  json_schema_main.json  json_schema_path.json  mkdocs.yml  new_config.py  nf-cloud.drawio  nginx-high-available.conf  out.csv  package.json  pyproject.toml  (+8 more)
.github/workflows/: build_test_publish.yml
.nicegui/: storage-user-589b0e31-7ace-4a90-8200-0cc9b0c2fce5.json  storage-user-85a80e49-3b99-4699-8caa-e5d7adfba4e1.json  storage-user-9dffdf42-d5e1-40e5-a859-dbfb798a5b1e.json
0.0.1/: index.html
0.0.1/installation/: index.html
0.0.10/: index.html
0.0.10/development/: index.html
0.0.2/: index.html
0.0.3/: index.html
0.0.4/: index.html
0.0.5/: index.html
0.0.6/: index.html
0.0.7/: index.html
0.0.8/: index.html
0.0.9/: 404.html  index.html
1.1.0/: index.html
backend/: README.md  Readme.md  db_seed.yaml  entrypoint.sh  hash_generator.py  pyproject.toml
backend/docs/source/: api.rst
backend/nf_cloud_backend/: __init__.py  __main__.py  configuration.py  crud.py  database.py  main.py
backend/nf_cloud_backend/auth/: abstract_authorization.py  auth_handler.py  authorization.py  authorization_handler.py  database_authorization.py  file_based_authorization.py  jwt.py  openid_authorization.py  password_handler.py  provider_type.py
backend/nf_cloud_backend/controllers/: depends.py  project.py  users.py  workflow.py
backend/nf_cloud_backend/models/: project.py  schemas.py  supportedWorkflowEngine.py  token.py  token_data.py  user.py  userInDB.py  workflow.py  workflow_share.py
backend/nf_cloud_backend/tests/: __init__.py  base.py  constants.py  matrix.py  runner.py
backend/nf_cloud_backend/tests/cases/: auth.py  test_auth.py  test_workflow.py  workflow.py
backend/nf_cloud_backend/tests/old/: __init__.py  test_workflow.py
backend/nf_cloud_backend/utils/: pyproject.toml
backend/nf_cloud_backend/utils/src/macworp_utils/: constants.py  timeStamp.py
backend/src/: MANIFEST.in
backend/src/macworp_backend/: __init__.py  __main__.py  command_line_interface.py  database.py  server.py
backend/src/macworp_backend/authorization/: abstract_authentication.py  file_based_authentication.py  jwt.py  openid_connect_authentication.py  provider_type.py
backend/src/macworp_backend/controllers/: socketio_controller.py
backend/src/macworp_backend/controllers/api/: ping_controller.py  projects_controller.py  record_selector_controller.py  users_controller.py  utilities_controller.py  workflows_controller.py
backend/src/macworp_backend/data/: workflow.default.json  workflow.schema.json
backend/src/macworp_backend/errors/: unknown_table_format.py
backend/src/macworp_backend/json_schemes/: workflow.schema.json
backend/src/macworp_backend/migrations/: 005_refactor workflow to workflow_id.py  006_add_default_for_definition_on_workflows.py  007_add_ignore_column_to_projects.py  008_remove_workflow_id_and_params_from_projects.py
backend/src/macworp_backend/models/: project.py  user.py  workflow.py
backend/src/macworp_backend/utility/: command_line_interface.py  configuration.py  matomo.py  rabbit_mq.py
backend/src/nf_cloud_backend/: __init__.py  __main__.py  command_line_interface.py  constants.py  database.py
backend/src/nf_cloud_backend/authorization/: abstract_authentication.py  file_based_authentication.py  jwt.py  openid_connect.py  openid_connect_authentication.py  utility.py
backend/src/nf_cloud_backend/controllers/api/: projects_controller.py  record_selector_controller.py  users_controller.py  workflows_controller.py
backend/src/nf_cloud_backend/json_schemes/: workflow.schema.json
backend/src/nf_cloud_backend/migrations/: 001_create workflows.py
backend/src/nf_cloud_backend/models/: __init__.py  project.py  workflow.py
backend/src/nf_cloud_backend/utility/: configuration.py
backend/src/nf_cloud_backend/utility/headers/: accept_language.py  cross_origin_resource_sharing.py
backend/test_files/: local.config.yml
backend/tests/: configuration_test.py
docker/: backend.dockerfile  backend.dockerfile.dockerignore  frontend.dockerfile  frontend.dockerfile.dockerignore  macworp.dockerfile  macworpbash.dockerfile  macworpbash.dockerfile.dockerignore  worker.dockerfile  worker.dockerfile.dockerignore
docs/: development.md  index.md  installation.md  workflow_integration.md
frontend/: Readme.md  entrypoint.sh  main.py  nuxt.config.js  package-lock.json  package.json
nf_cloud_backend/: Readme.md  __init__.py  __main__.py  command_line_interface.py  constants.py  database.py  entrypoint.sh  server.py
nf_cloud_frontend/: README.md  Readme.md  nuxt.config.js  package.json
nf_cloud_worker/: Readme.md  __main__.py  comand_line_interface.py  worker.py  workflow_executor.py
quickstart/: certificate-creation.sh  config.yml  docker-compose.yml
utils/: LICENSE  pyproject.toml
worker/: Readme.md  pyproject.toml
worker/src/macworp_worker/: __main__.py  comand_line_interface.py  executor.py  worker.py  workflow_executor.py
worker/src/macworp_worker/web/: backend_web_api_client.py  weblog_proxy.py
worker/src/macworp_worker/web/log_proxy/: server.py  settings.py
worker/src/macworp_worker/web/log_proxy/controllers/: nextflow_controller.py  snakemake_controller.py
worker/src/macworp_worker/workflow_engine_cmd_generators/: cmd_generator.py  nextflow_cmd_generator.py  snakemake_cmd_generator.py
worker/src/nf_cloud_worker/: __main__.py  comand_line_interface.py  logging.py  worker.py  workflow_executor.py
worker/src/nf_cloud_worker/logging/: logger.py
worker/src/nf_cloud_worker/web/: nf_cloud_web_api_client.py  weblog_proxy.py
(+292 files in other folders)
