[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "nf_cloud_backend"
version = "2.0.0"
dependencies = [
	"fastapi >= 0.110.2",
	"sqlmodel >= 0.0.16",
	"passlib ~= 1.7",
	"psycopg ~= 3.1",
	"pyyaml ~= 6.0",
	"pyjwt ~= 2.8",
	"uvicorn >= 0.29.0",
]

[project.optional-dependencies]
dev = [
    "honcho",
    "pylint",
	"sphinx",
]