[build-system]
requires = ["setuptools", "wheel", "Cython"]
build-backend = "setuptools.build_meta"

[project]
name = "nf_cloud_backend"
requires-python = ">=3.9"
version = "1.0.0"
dependencies = [
    "dnspython <2.6",  # Once flask and eventlet is upgraded or we migrated to FastAPI this can be removed.
    "eventlet  >=0.33, <0.34",
    "Flask  >=2, <3",
    "Flask-Caching  >=2, <3",
    "Flask-Cors  >=3, <4",
    "Flask-Login  >=0.6.1, <0.7.0",
    "flask-socketio  >=5, <6",
    "gunicorn @ git+https://github.com/benoitc/gunicorn.git@ff58e0c6da83d5520916bc4cc109a529258d76e1#egg=gunicorn",
    "jsonschema  >=4, <5",
    "kombu  >=5, <6",
    "markupsafe  ==2.0.1",      # fix for `ImportError: cannot import name 'soft_unicode'
    "markdown ~=3.6",
    "mergedeep  >=1, <2",
    "oauthlib  >=3, <4",
    "pandas ~=2.0",
    "peewee  >=3, <4",
    "peewee-migrate  >=1.1.6",
    "pika  >=1, <2",
    "piwikapi  ==0.3",
    "psycopg2-binary  >=2, <3",
    "pyjwt  >=2, <3",
    "PyYAML >=6, <7",
    "redis >=4, <5",
    "requests  >=2, <3",
    "typing_extensions  >=4, <5",
    "zipstream-new  >=1, <2"
]

[project.optional-dependencies]
dev = [
    "black",
    "honcho",
    "pylint"
]