[build-system]
requires = ["setuptools", "wheel", "Cython", "hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "macworp_worker"
requires-python = ">=3.9"
version = "1.0.0"
dependencies = [
    "fastapi ~=0.110",
    "macworp_utils @ {root:parent:uri}/utils",
    "mergedeep >=1.3.4, <2",
    "pydantic ~= 2.9",
    "pydantic-settings ~=2.2 ",
    "pika  >=1, <2",
    "requests  >=2, <3",
    "uvicorn  ~=0.29",

]

[project.optional-dependencies]
dev = [
    "honcho",
    "kaleido", # for demo workflow
    "plotly", # for demo workflow
    "pylint",
    "types-peewee"
]