[build-system]
requires = ["setuptools", "wheel", "Cython", "hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "macworp_worker"
requires-python = ">=3.9"
version = "1.0.0"
license = {file = "./LICENSE"}
description = "Worker for handling tasks scheduled by Massive Accessible Workflow Platform (MAcWorP) backend"
authors = [
    {name = "Core Unit Bioinformatic Ruhr University Bochum", email = "cubimed@rub.de"},
]
maintainers = [
    {name = "Dirk Winkelhardt", email = "dirk.winkelhardt@rub.de"}
]

dependencies = [
    "fastapi ~=0.110",
    "macworp_utils @ {root:parent:uri}/utils",
    "mergedeep >=1.3.4, <2",
    "pydantic ~= 2.9",
    "pydantic-settings ~=2.2 ",
    "pika  >=1, <2",
    "requests  >=2, <3",
    "uvicorn  ~=0.29",

]

[project.optional-dependencies]
dev = [
    "honcho",
    "kaleido", # for demo workflow
    "plotly", # for demo workflow
    "pylint",
    "types-peewee",
    "types-PyYAML",
    "types-requests"
]


[project.urls]
homepage = "https://github.com/cubimedrub/macworp"
