[build-system]
requires = ["setuptools", "wheel", "Cython"]
build-backend = "setuptools.build_meta"

[project]
name = "macworp_utils"
requires-python = ">=3.9"
version = "1.0.0"
license = {file = "./LICENSE"}
description = "Shared code for Massive Accessible Workflow Platform (MAcWorP) backend and worker"
authors = [
    {name = "Core Unit Bioinformatic Ruhr University Bochum", email = "cubimed@rub.de"},
]
maintainers = [
    {name = "Dirk Winkelhardt", email = "dirk.winkelhardt@rub.de"}
]


dependencies = [
    "jsonschema  >=4, <5",
    "kombu  >=5, <6",
    "markupsafe  ==2.0.1",      # fix for `ImportError: cannot import name 'soft_unicode'
    "markdown ~=3.6",
    "mergedeep  >=1, <2",
    "oauthlib  >=3, <4",
    "pandas ~=2.0",
    "peewee  >=3, <4",
    "peewee-migrate  >=1.1.6",
    "psycopg2-binary  >=2, <3",
    "pydantic ~= 2.9",
    "pyjwt  >=2, <3",
    "PyYAML >=6, <7",
    "requests  >=2, <3",
    "typing_extensions  >=4, <5",
]

[project.optional-dependencies]
dev = [
    "black",
    "pylint"
]

[project.urls]
homepage = "https://github.com/cubimedrub/macworp"